--- a/combined.css
+++ b/combined.css
@@ -1,4 +1,4 @@
-@media (min-width: 400px)
+/*@media (min-width: 400px)
 {
     .container{
         display: flex;
@@ -14,7 +14,7 @@
         flex-wrap: wrap;
     }
     
-}
+}*/
 body
 {
     background-color: rgb(247,220,255);
