--- a/index.css
+++ b/index.css
@@ -1,22 +1,16 @@
-@media (min-width: 400px)
+/*@media  (min-width: 400px)
 {
-    .container{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-}
-@media( max-width: 960px)
-{
+    
     .container{
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
     }
     
-}
+}*/
 body
-{
+{    
+    margin: 0;
     background-color: rgb(247,220,255);
 }
 .sidenav
@@ -51,8 +45,10 @@ body
 }
 .img1
 {
-    padding-left: 38%;
+    padding-left: 40%;
+    
 }
+
 .container
 {
     display: flex;
@@ -61,7 +57,7 @@ body
 .box1
 {
     margin-top: 4%;
-    margin-left: 10%;
+    margin-left: 15%;
 }
 .box2
 {
@@ -98,3 +94,4 @@ body
     margin-left: 10%;
     margin-top: 0%;
 }
+
